add content based

--- a/Notebook/Content Based Filtering/Exploreka_Content_based.ipynb
+++ b/Notebook/Content Based Filtering/Exploreka_Content_based.ipynb
@@ -22,15 +22,20 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7604a0e2-a044-4d44-b14a-1755229ed504"
+        "outputId": "ed80c3e3-bcfe-4260-df42-1205161c8971"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: Sastrawi in /usr/local/lib/python3.10/dist-packages (1.0.1)\n"
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/96.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m96.2/96.2 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hLooking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting Sastrawi\n",
+            "  Downloading Sastrawi-1.0.1-py2.py3-none-any.whl (209 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m209.7/209.7 kB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: Sastrawi\n",
+            "Successfully installed Sastrawi-1.0.1\n"
           ]
         }
       ],
@@ -47,6 +52,7 @@
         "import matplotlib.pyplot as plt \n",
         "import seaborn as sns \n",
         "import plotly.express as px \n",
+        "import pickle\n",
         "\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
@@ -85,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "o9L3BF8wRo1e",
-        "outputId": "61a5af27-2a99-43b1-d177-59c4a7d46e75"
+        "outputId": "280fb6d9-b4be-4148-ce31-0c86ae4c3033"
       },
       "execution_count": null,
       "outputs": [
@@ -155,7 +161,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n3JVVG6AR1IL",
-        "outputId": "93b32ee1-b646-44c7-8a46-584c5766d327"
+        "outputId": "09648689-8692-431f-963e-3ade477f611a"
       },
       "execution_count": null,
       "outputs": [
@@ -219,10 +225,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 337
+          "height": 354
         },
         "id": "WRTvmoVNTjFM",
-        "outputId": "cb9a0ac5-e2ee-4697-bf2c-7d653bcfaec4"
+        "outputId": "4c775476-93a2-4c44-c5fc-b0d89f5801c0"
       },
       "execution_count": null,
       "outputs": [
@@ -253,7 +259,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ed185fb1-4e08-4fa2-be52-1edc7d833550\">\n",
+              "  <div id=\"df-d112df63-3e64-4eb4-aa05-a4442dedb044\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -342,7 +348,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed185fb1-4e08-4fa2-be52-1edc7d833550')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d112df63-3e64-4eb4-aa05-a4442dedb044')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -393,12 +399,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ed185fb1-4e08-4fa2-be52-1edc7d833550 button.colab-df-convert');\n",
+              "          document.querySelector('#df-d112df63-3e64-4eb4-aa05-a4442dedb044 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ed185fb1-4e08-4fa2-be52-1edc7d833550');\n",
+              "          const element = document.querySelector('#df-d112df63-3e64-4eb4-aa05-a4442dedb044');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -421,7 +427,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 5
         }
       ]
     },
@@ -435,8 +441,8 @@
         "    html_pattern = re.compile('<.*?>')\n",
         "    data = html_pattern.sub(r'', data)\n",
         "    tokenizer = RegexpTokenizer(r'\\w+')\n",
-        "    data = tokenizer.tokenize(data)\n",
-        "    data = \" \".join(data)\n",
+        "    data_token = tokenizer.tokenize(data)\n",
+        "    data = \" \".join(data_token)\n",
         "    return data"
       ],
       "metadata": {
@@ -456,10 +462,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 467
+          "height": 641
         },
         "id": "XWmiMTtX0K_n",
-        "outputId": "c2fd4265-ec54-43e3-ed88-3781e454c3fe"
+        "outputId": "0b24a8f6-ff98-4ca4-e143-be23c0722c88"
       },
       "execution_count": null,
       "outputs": [
@@ -497,7 +503,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-401563fb-fa18-4536-a1fe-de90cc62548c\">\n",
+              "  <div id=\"df-e356b75d-a74c-4ae7-946b-b715aafecebd\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -617,7 +623,7 @@
               "</table>\n",
               "<p>437 rows × 5 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-401563fb-fa18-4536-a1fe-de90cc62548c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e356b75d-a74c-4ae7-946b-b715aafecebd')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -668,12 +674,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-401563fb-fa18-4536-a1fe-de90cc62548c button.colab-df-convert');\n",
+              "          document.querySelector('#df-e356b75d-a74c-4ae7-946b-b715aafecebd button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-401563fb-fa18-4536-a1fe-de90cc62548c');\n",
+              "          const element = document.querySelector('#df-e356b75d-a74c-4ae7-946b-b715aafecebd');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -696,9 +702,34 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 37
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# with open('tokenizer.pkl', 'wb') as file:\n",
+        "#       pickle.dump(tokenizer, file)\n",
+        "    # with open('tokenizer.pkl', 'rb') as file:\n",
+        "    #   tokenizer = pickle.load(file)"
+      ],
+      "metadata": {
+        "id": "rYT3XcAyYJaF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_filtering.to_csv(\"data_filtering.csv\", index=False, header=True)"
+      ],
+      "metadata": {
+        "id": "AFELOduhfAor"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -709,10 +740,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 641
         },
         "id": "unwRPErq03KB",
-        "outputId": "fa09de45-3366-49bc-a41a-e01907783d8e"
+        "outputId": "470bd6ed-887c-4a66-b429-0a2c58a762d2"
       },
       "execution_count": null,
       "outputs": [
@@ -735,14 +766,14 @@
               "\n",
               "     Rating                                            Content  \n",
               "0       4.6  monumen nasional populer singkat monas tugu mo...  \n",
-              "1       4.6  kota tua jakarta juga nama kota tua pusat alun...  \n",
+              "1       4.6  kota tua jakarta nama kota tua pusat alun fata...  \n",
               "2       4.6  dunia fantasi sebut dufan tempat hibur letak k...  \n",
               "3       4.5  taman mini indonesia indah rupa suatu kawasan ...  \n",
               "4       4.5  atlantis water adventure kenal atlantis ancol ...  \n",
               "..      ...                                                ...  \n",
               "432     4.4  museum negeri mpu tantular buah museum negeri ...  \n",
               "433     4.6  taman bungkul taman wisata kota letak pusat ko...  \n",
-              "434     4.4  air mancur tari dancing fountain ada kawasan j...  \n",
+              "434     4.4  air mancur tari dancing fountain kawasan jemba...  \n",
               "435     4.6  taman flora salah satu taman kota surabaya rup...  \n",
               "436     4.8  gereja katolik lahir santa perawan maria rupa ...  \n",
               "\n",
@@ -750,7 +781,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5db2f3d9-26af-4a40-b54c-d09f4c14cd4d\">\n",
+              "  <div id=\"df-b2fee507-eab0-41bf-ab11-e803608dee5a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -792,7 +823,7 @@
               "      <td>Kota Tua</td>\n",
               "      <td>Budaya</td>\n",
               "      <td>4.6</td>\n",
-              "      <td>kota tua jakarta juga nama kota tua pusat alun...</td>\n",
+              "      <td>kota tua jakarta nama kota tua pusat alun fata...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -848,7 +879,7 @@
               "      <td>Taman Air Mancur Menari Kenjeran</td>\n",
               "      <td>Taman Hiburan</td>\n",
               "      <td>4.4</td>\n",
-              "      <td>air mancur tari dancing fountain ada kawasan j...</td>\n",
+              "      <td>air mancur tari dancing fountain kawasan jemba...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>435</th>\n",
@@ -870,7 +901,7 @@
               "</table>\n",
               "<p>437 rows × 5 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5db2f3d9-26af-4a40-b54c-d09f4c14cd4d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b2fee507-eab0-41bf-ab11-e803608dee5a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -921,12 +952,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5db2f3d9-26af-4a40-b54c-d09f4c14cd4d button.colab-df-convert');\n",
+              "          document.querySelector('#df-b2fee507-eab0-41bf-ab11-e803608dee5a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5db2f3d9-26af-4a40-b54c-d09f4c14cd4d');\n",
+              "          const element = document.querySelector('#df-b2fee507-eab0-41bf-ab11-e803608dee5a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -949,7 +980,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 41
         }
       ]
     },
@@ -963,10 +994,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 582
+          "height": 566
         },
         "id": "KOGbkjRfJ-bT",
-        "outputId": "9572e0b4-882c-42ca-ccfc-c4ac795595f3"
+        "outputId": "b583fcf1-5676-44b2-9c3f-d0089e1bb5fb"
       },
       "execution_count": null,
       "outputs": [
@@ -978,7 +1009,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -1015,10 +1046,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 676
+          "height": 565
         },
         "id": "l6DK4xD5Mo7V",
-        "outputId": "bc57c75a-e7a9-491b-9433-51238ad49f1f"
+        "outputId": "51eeadc1-4edd-4955-a0a0-333761038fab"
       },
       "execution_count": null,
       "outputs": [
@@ -1030,7 +1061,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 10
         },
         {
           "output_type": "display_data",
@@ -1055,7 +1086,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "niviGrij3CSW",
-        "outputId": "7f04133f-38c5-416f-b2f5-38ea9a91e7e2"
+        "outputId": "c0557c33-6f54-4d1f-d99b-62bf606f0331"
       },
       "execution_count": null,
       "outputs": [
@@ -1073,7 +1104,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 11
         }
       ]
     },
@@ -1088,7 +1119,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gw4i3aQl3ZIB",
-        "outputId": "8fa1239a-be4f-45c9-e3d1-53c7b0cc6b9c"
+        "outputId": "7bf7096f-c34c-495f-b592-c57ca2e4871f"
       },
       "execution_count": null,
       "outputs": [
@@ -1101,7 +1132,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 14
         }
       ]
     },
@@ -1138,7 +1169,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oPyCcKhg3gzb",
-        "outputId": "15e21de6-3241-4b2a-b812-bac6c49ec228"
+        "outputId": "d039d9cc-8c31-4a0a-f9fc-1518975d925d"
       },
       "execution_count": null,
       "outputs": [
@@ -1168,14 +1199,13 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 15
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "import pickle\n",
         "# Simpan model ke dalam file\n",
         "model_file = 'content_based_model.pkl'\n",
         "with open(model_file, 'wb') as file:\n",
